--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,9 +3,11 @@
 @import "./styles/homePage.css";
 @import "./styles/header.css";
 @import "./styles/footer.css";
+@import "./styles/profilePage.css";
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Arial, sans-serif;
 }
