Login and register altered. Added most active users and search bar.

--- a/frontend/src/styles/registerPage.css
+++ b/frontend/src/styles/registerPage.css
@@ -1,11 +1,10 @@
 .register-page {
-  background-image: url("../assets/LoginBackground.png");
+  background-image: url("../assets/LoginBackground.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
   height: 100vh;
   margin: 0;
   font-family: Arial, sans-serif;
@@ -17,9 +16,10 @@
   justify-content: center;
   align-items: center;
   gap: 15px;
-  background-color: rgba(255, 255, 255, 0.102);
-  border-radius: 15px;
+  background-color: rgba(33, 33, 33, 0.544);
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+  border: 1px groove;
+  border-left-color: white;
   width: 30%;
   min-width: 250px;
   backdrop-filter: blur(10px);
@@ -27,29 +27,25 @@
 
 .register-div h2 {
   display: flex;
-  justify-content: center;
+  font-family: 'Roboto', sans-serif;
   font-size: 2em;
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border-radius: 14px 14px 0 0;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.027);
-  background-color: #0b0c0c9a;
+  width: 85%;
+  padding-bottom: 0.5vh;
+  border-bottom: 1px groove white;
   color: white;
 }
 
 .register-form {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  padding: 0 30px;
+  width: 85%;
   gap: 12px;
 }
 
 .register-form input {
   padding: 10px;
   border: none;
-  background-color: rgba(0, 0, 0, 0.408);
+  background-color: rgba(44, 44, 44, 0.408);
   outline: none;
   border-radius: 5px;
   margin: 0;
@@ -63,7 +59,7 @@
 }
 
 .register-form input:hover {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(44, 44, 44, 0.7);
 }
 
 .register-form input {
@@ -96,34 +92,36 @@
 .register-button {
   margin-top: 10px;
   padding: 10px;
-  border: none;
+  border: 0.5px groove;
+  border-color: rgb(44, 44, 44);
   border-radius: 5px;
-  background-color: #007bff;
-  color: white;
+  background-color: rgb(44, 44, 44);
+  color: rgba(255, 255, 255, 0.624);
   font-size: 16px;
   cursor: pointer;
   width: 100%;
 }
 
 .register-button {
-  transition: background-color 0.3s, color 0.3s;
+  transition: background-color 0.3s, color 0.3s, border-color 0.3s ease;
 }
 
 .register-button:hover {
-  background-color: #0056b3;
-  color: #eaeaea;
+  border-color: white;
+  background-color: rgba(44, 44, 44, 0.48);
+  color: white;
 }
 
 .login-link {
   margin-top: 15px;
   font-size: 14px;
-  color: #062546;
+  color: rgba(255, 255, 255, 0.624);
   text-decoration: none;
   margin-bottom: 15px;
 }
 
 .login-link strong {
-  color: #0056b3;
+  color: white;
 }
 
 .login-link:hover {
