--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -10,6 +10,18 @@
   margin-bottom:10px;
 }
 
+.homePage-header div{
+  display: flex;
+  gap: 0.5vw;
+  align-items: center;
+}
+.homePage-header input{
+  width: 20vw;
+  height: 4vh;
+  font-size: 1rem;
+  align-self: end;
+}
+
 .header-logo img {
   width: 120px;
   height: auto;
@@ -40,4 +52,87 @@
 
 .homePage-navigation a:active {
   color: #0056b3;
+}
+
+/*fffsfsfsf*\
+/* Search Bar Container */
+.search-bar-container {
+  position: relative; /* Ključ za pozicioniranje rezultata */
+  display: flex; /* Centriranje sadržaja unutar kontejnera */
+  flex-direction: column; /* Osigurava vertikalno raspoređivanje */
+  align-items: center; /* Centriranje horizontalno */
+}
+
+/* Search Input */
+.search-input {
+  width: auto; /* Dinamička širina */
+  max-width: 400px; /* Opcionalno ograničenje širine */
+  padding: 10px 15px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+/* Rezultati pretrage */
+.search-results {
+  position: absolute; /* Rezultati pretrage se odvajaju od toka */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  top: calc(100% + 5px); /* Pozicionira ispod search input-a */
+  left: 0;
+  width: 100%; /* Rezultati iste širine kao input */
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  max-height: 300px; /* Ograničenje visine za pretrage sa puno podataka */
+  overflow-y: auto;
+  box-sizing: border-box;
+  text-align: left; /* Poravnanje teksta levo */
+}
+
+/* Grupisani rezultati */
+.results-group {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  padding: 1vh 0.5vw;
+  border-bottom: 1px solid #f1f1f1;
+}
+
+.results-group h4 {
+  margin: 0 0 1vh;
+  font-size: 1rem;
+  color: #555;
+  text-transform: uppercase;
+  align-self: start;
+}
+
+.results-group ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+
+.result-item {
+  padding: 5px 10px;
+  font-size: 0.9rem;
+  color: #333;
+  cursor: pointer;
+  line-height: 1.5;
+}
+
+.result-item:hover {
+  background-color: #f9f9f9;
+}
+
+.no-results {
+  padding: 10px;
+  font-size: 14px;
+  color: #888;
+  text-align: center;
 }
