--- a/frontend/src/styles/homePage.css
+++ b/frontend/src/styles/homePage.css
@@ -9,9 +9,101 @@
   width: 100%;
 }
 
-.homePage h1 {
-  font-size: 3rem;
-  color: #333333;
-  margin-bottom: 20px;
-  flex: 1;
+.homeContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  padding: 2vh 0;
+  width: 80vw;
+  height: 100vh;
+}
+
+.homeContainer h3{
+  font-weight: 400;
+  box-sizing: border-box;
+  font-family: 'Arial', sans-serif;
+}
+
+.homeUsers{
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  overflow: hidden;
+  padding: 0 0.2vw;
+  height: 30vh;
+  gap: 1vw;
+}
+
+.homeUserCard{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 20vw;
+  height: 80%;
+  border-radius: 3px;
+  border: 1px groove;
+  border-color: white;
+  font-size: 0.85em;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  padding: 1vh 0.2vw;
+}
+
+.selected{
+  transform: scale(1.02);
+}
+
+.homeUserCardProfile{
+  display: flex;
+  justify-content: center;
+  gap: 3vw;
+  width: 100%;
+  height: 45%;
+  padding: 1vh 0;
+}
+
+.homeUserCardProfileText{
+  display: flex;
+  flex-direction: column;
+  gap: 1vh;
+  width: 40%;
+  height: 100%;
+}
+
+.homeUserCardProfile img{
+  width: auto;
+  height: 100%;
+}
+
+.homeUserCardData {
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+  width: 90%;
+  height: 100%;
+}
+.homeUserCardData div{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding: 1vh 1vw;
+  gap: 1vh;
+  border-top: 1px solid rgb(196, 196, 196);
+}
+
+.homeUserCardData button{
+  height: 4vh;
+  border: 0.5px;
+  border-color: rgb(241, 241, 241);
+  background-color: rgb(216, 216, 216);
+  color: rgb(59, 59, 59);
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1em;
+  transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+}
+
+.homeUserCardData button:hover{
+  background-color: rgba(216, 216, 216, 0.581);
+  color: black;
+  border-color: black;;
 }
