--- a/frontend/src/styles/profilePage.css
+++ b/frontend/src/styles/profilePage.css
@@ -9,6 +9,7 @@
   color: #333;
 }
 
+
 .profileContainer {
   max-width: 700px;
   width: 90%;
@@ -20,6 +21,8 @@
   flex-direction: column;
   align-items: center;
   margin: 20px auto;
+  height: 50vh;
+  transition: height 0.3s ease;
 }
 
 .profilePicture {
