created functionality to add events; checks is user number valid

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@
 @import "./styles/header.css";
 @import "./styles/footer.css";
 @import "./styles/profilePage.css";
+@import "./styles/eventsPage.css";
 
 * {
   margin: 0;
