--- a/frontend/src/styles/homePage.css
+++ b/frontend/src/styles/homePage.css
@@ -9,7 +9,7 @@
   width: 100%;
 }
 
-.homeContainer{
+.homeContainer {
   display: flex;
   flex-direction: column;
   justify-content: start;
@@ -18,13 +18,13 @@
   height: 100vh;
 }
 
-.homeContainer h3{
+.homeContainer h3 {
   font-weight: 400;
   box-sizing: border-box;
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
 }
 
-.homeUsers{
+.homeUsers {
   display: flex;
   align-items: center;
   flex-wrap: nowrap;
@@ -34,7 +34,7 @@
   gap: 1vw;
 }
 
-.homeUserCard{
+.homeUserCard {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,11 +48,11 @@
   padding: 1vh 0.2vw;
 }
 
-.selected{
+.selected {
   transform: scale(1.02);
 }
 
-.homeUserCardProfile{
+.homeUserCardProfile {
   display: flex;
   justify-content: center;
   gap: 3vw;
@@ -61,7 +61,7 @@
   padding: 1vh 0;
 }
 
-.homeUserCardProfileText{
+.homeUserCardProfileText {
   display: flex;
   flex-direction: column;
   gap: 1vh;
@@ -69,7 +69,7 @@
   height: 100%;
 }
 
-.homeUserCardProfile img{
+.homeUserCardProfile img {
   width: auto;
   height: 100%;
 }
@@ -81,7 +81,7 @@
   width: 90%;
   height: 100%;
 }
-.homeUserCardData div{
+.homeUserCardData div {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -90,7 +90,7 @@
   border-top: 1px solid rgb(196, 196, 196);
 }
 
-.homeUserCardData button{
+.homeUserCardData button {
   height: 4vh;
   border: 0.5px;
   border-color: rgb(241, 241, 241);
@@ -99,11 +99,12 @@
   border-radius: 5px;
   cursor: pointer;
   font-size: 1em;
-  transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+  transition: background-color 0.3s ease, color 0.3s ease,
+    border-color 0.3s ease;
 }
 
-.homeUserCardData button:hover{
+.homeUserCardData button:hover {
   background-color: rgba(216, 216, 216, 0.581);
   color: black;
-  border-color: black;;
+  border-color: black;
 }
