--- a/frontend/src/styles/eventsPage.css
+++ b/frontend/src/styles/eventsPage.css
@@ -32,10 +32,11 @@
   justify-content: flex-start;
   align-items: flex-start;
   border-radius: 8px;
-  padding: 1rem;
+  padding: 1em;
   background-color: #ffffff;
   width: 90%;
-  max-width: 400px;
+  max-width: 25vw;
+  height: 70vh;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 10px;
 }
@@ -43,13 +44,13 @@
 .newEventForm input,
 .newEventForm textarea,
 .newEventForm select {
-    height: 2.5rem;
+    height: 2em;
     width: 100%;
-    margin: 0.5rem 0;
-    padding: 0.5rem;
+    margin: 0.5em 0;
+    padding: 0.5em;
     border: 1px solid #ccc;
     border-radius: 8px;
-    font-size: 1rem;
+    font-size: 0.9em;
     box-sizing: border-box;
 }
 
@@ -62,8 +63,8 @@
     padding: 12px;
     padding-right: 50px;
     box-sizing: border-box;
-    min-height: 120px;
-    font-size: 16px;
+    min-height: 10vh;
+    font-size: 0.8em;
     resize: none;
   }
   
@@ -71,7 +72,7 @@
     position: absolute;
     bottom: 12px;
     right: 10px;
-    font-size: 12px;
+    font-size: 0.5em;
     color: #888;
   }
 
@@ -94,19 +95,20 @@ textarea::-webkit-scrollbar-thumb {
   width: 100%;
   margin-bottom: 0.5rem;
   font-weight: bold;
-  font-size: 0.9rem;
+  font-size: 0.9em;
 }
 
 .newEventForm button {
-  height: 2.5rem;
+  height: 4vh;
   width: 100%;
   background-color: lightgray;
   color: black;
   border: none;
   border-radius: 8px;
   cursor: pointer;
-  font-size: 1rem;
-  margin-top: 1rem;
+  font-size: 0.9em;
+  margin-top: 7vh;
+  transition: background-color 0.5s;
 }
 
 .newEventForm button:hover {
