--- a/frontend/src/styles/loginPage.css
+++ b/frontend/src/styles/loginPage.css
@@ -1,5 +1,5 @@
 .login-page {
-  background-image: url("../assets/LoginBackground.jpeg");
+  background-image: url("../assets/background.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -8,10 +8,21 @@
   align-items: start;
   height: 100vh;
   margin: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
+  filter: brightness(0.85);
 }
+/* .login-page::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.17);
+  pointer-events: none;
+} */
 
-.login-infoLogo{
+.login-infoLogo {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -21,8 +32,7 @@
   padding: 4vh 2vw;
 }
 
-
-.login-info{
+.login-info {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -31,11 +41,11 @@
   gap: 2vh;
 }
 
-.login-info h2{
-  font-size: 6.5rem;;
+.login-info h2 {
+  font-size: 6.5rem;
 }
 
-.login-info h4{
+.login-info h4 {
   font-size: 2em;
 }
 
@@ -62,7 +72,7 @@
 
 .login-div h2 {
   display: flex;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 2em;
   width: 85%;
   padding-bottom: 0.5vh;
