--- a/frontend/src/styles/eventsPage.css
+++ b/frontend/src/styles/eventsPage.css
@@ -38,7 +38,7 @@
   max-width: 25vw;
   height: 70vh;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  margin-bottom: 10px;
+  margin-top: 20px;
 }
 
 .newEventForm input,
