--- a/frontend/src/styles/loginPage.css
+++ b/frontend/src/styles/loginPage.css
@@ -9,7 +9,7 @@
   height: 100vh;
   margin: 0;
   font-family: "Lato", sans-serif;
-  filter: brightness(0.85);
+  filter: brightness(0.75);
 }
 /* .login-page::after {
   content: "";
@@ -28,7 +28,6 @@
   justify-content: space-between;
   width: 100%;
   height: 100%;
-  color: white;
   padding: 4vh 2vw;
 }
 
@@ -39,6 +38,7 @@
   height: 30vh;
   padding-top: 10vh;
   gap: 2vh;
+  color: rgb(255, 255, 255);
 }
 
 .login-info h2 {
@@ -77,7 +77,7 @@
   width: 85%;
   padding-bottom: 0.5vh;
   border-bottom: 1px groove white;
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 .login-form {
