--- a/frontend/src/styles/profilePage.css
+++ b/frontend/src/styles/profilePage.css
@@ -15,7 +15,7 @@
   padding: 30px;
   background-color: #fff;
   border-radius: 12px;
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,22 +35,22 @@
   width: 150px;
   height: 150px;
   object-fit: cover;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  border: 4px solid #007bff;
+  border: 4px solid #ddd;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .uploadButton {
   cursor: pointer;
-  color: #007bff;
+  color: #333;
   font-weight: bold;
   font-size: 14px;
-  text-decoration: underline;
+  text-decoration: none;
   transition: color 0.3s ease;
 }
 
 .uploadButton:hover {
-  color: #0056b3;
+  color: #555;
 }
 
 .profileInfoContainer {
@@ -90,6 +90,7 @@
   padding: 5px;
   flex: 1;
 }
+
 .profileField .value {
   font-size: 16px;
   font-weight: normal;
@@ -107,11 +108,11 @@
   border-radius: 4px;
   padding: 5px;
   flex: 1;
-  background-color: white;
+  background-color: #fff;
 }
 
 .profileField select:focus {
-  border-color: #007bff;
+  border-color: #333;
   outline: none;
 }
 
@@ -148,28 +149,28 @@
 }
 
 .saveButton {
-  background-color: #28a745;
+  background-color: #333;
   color: white;
 }
 
 .saveButton:hover {
-  background-color: #218838;
+  background-color: #222;
 }
 
 .cancelButton {
-  background-color: #dc3545;
+  background-color: #ff0a0acb;
   color: white;
 }
 
 .cancelButton:hover {
-  background-color: #c82333;
+  background-color: #fc0000;
 }
 
 .editButton {
-  background-color: #007bff;
+  background-color: #333;
   color: white;
 }
 
 .editButton:hover {
-  background-color: #0056b3;
+  background-color: #222;
 }
