Add more functionality and style to my events page

--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -6,6 +6,7 @@
   background-color: #f3f2f2;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   width: 100%;
+  min-height: 10vh;
 }
 
 .homePage-header div {
