--- a/frontend/src/styles/footer.css
+++ b/frontend/src/styles/footer.css
@@ -1,10 +1,12 @@
 .homePage-footer {
-    background-color: #f3f2f2; 
-    color: #333333; 
-    text-align: center;
-    padding: 10px 0;
-    border-top: 1px solid #a3a5a741; 
-    font-size: 0.9rem;
-    width:100%;
-  }
-  
+  background-color: #f3f2f2;
+  color: #333333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0;
+  border-top: 1px solid #a3a5a741;
+  font-size: 0.9rem;
+  width: 100%;
+  min-height: 10vh;
+}
