--- a/frontend/src/styles/myEventsPage.css
+++ b/frontend/src/styles/myEventsPage.css
@@ -118,3 +118,27 @@
   justify-content: center;
   align-items: center;
 }
+
+.btn-div{
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
+  align-self: center;
+  justify-content: space-evenly;
+}
+.edit-event-btn,
+.save-event-btn, 
+.cancel-event-btn{
+  padding: 10px;
+  margin: 15px;
+  width: 40%;
+  border-radius: 100px;
+  border: none;
+  cursor: pointer;
+}
+.edit-event-btn:hover,
+.save-event-btn:hover, 
+.cancel-event-btn:hover{
+  background-color: #333;
+  color: white;
+}
