--- a/frontend/src/styles/footer.css
+++ b/frontend/src/styles/footer.css
@@ -1,5 +1,5 @@
 .homePage-footer {
-  background-color: #f3f2f2;
+  background-color: rgb(15, 15, 15);
   color: #333333;
   display: flex;
   justify-content: center;
