--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -1,10 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+
 .homePage-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 5%;
-  background-color: #f3f2f2;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  background-color: rgb(15, 15, 15);
+  box-shadow: 0 2px 4px rgba(40, 40, 40, 0.2);
   width: 100%;
   min-height: 10vh;
 }
@@ -35,8 +37,9 @@
 }
 
 .homePage-navigation a {
+  font-family: "Roboto", sans-serif;
   text-decoration: none;
-  color: black;
+  color: rgb(234, 234, 234);
   font-size: 1rem;
   font-weight: 500;
 }
@@ -58,7 +61,9 @@
   max-width: 400px;
   padding: 10px 15px;
   font-size: 16px;
-  border: 1px solid #ccc;
+  border: 1px groove #ccc;
+  color: white;
+  background-color: transparent;
   border-radius: 4px;
   box-sizing: border-box;
 }
@@ -75,8 +80,7 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   z-index: 1000;
-  max-height: 300px;
-  overflow-y: auto;
+  overflow-y: scroll;
   box-sizing: border-box;
   text-align: left;
 }
