--- a/frontend/src/styles/homePage.css
+++ b/frontend/src/styles/homePage.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+
 .homePage {
   margin: 0;
   padding: 0;
@@ -7,8 +9,8 @@
   align-items: center;
   flex-direction: column;
   width: 100%;
-  /* background-color: hsla(222, 22%, 9%, 0.95); */
-  background-color: white;
+  z-index: 1;
+  background-color: rgb(30, 30, 30);
 }
 
 .homeContainer {
@@ -17,22 +19,42 @@
   justify-content: start;
   padding: 2vh 0;
   width: 80vw;
-  height: 100vh;
+  margin-bottom: 4vh;
+  gap: 2vh;
+}
+
+.homeContainer::before {
+  content: "";
+  position: absolute;
+  top: -100px;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%201440%20320%22%3E%3Cpath%20fill%3D%22%230099FF%22%20d%3D%22M0%2C64L1440%2C192L1440%2C0L0%2C0Z%22%2F%3E%3C%2Fsvg%3E")
+    repeat-x;
+  background-size: 1000px;
+  z-index: -1; /* Da bi bio ispod container-a */
 }
 
 .homeContainer h3 {
+  padding: 0 0.4vw;
   font-weight: 400;
   box-sizing: border-box;
   font-family: "Arial", sans-serif;
   color: black;
 }
 
+.user-list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5vh;
+}
 .homeUsers {
   display: flex;
   align-items: center;
   flex-wrap: nowrap;
   overflow: hidden;
-  padding: 0 0.2vw;
+  padding: 0 0.5vw;
   height: 30vh;
   gap: 1vw;
 }
@@ -114,24 +136,26 @@
 }
 
 .events-container {
-  max-width: 100%;
+  width: 80vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   justify-content: center;
-  padding-bottom: 50px;
+}
+
+.events-container h3 {
+  padding-left: 0.5vw;
+  color: white;
 }
 
 .upcomingEvents-container {
-  width: 80%;
-  margin: 0 auto;
-  padding: 20px 0;
-  height: 550px;
+  width: 100%;
+  height: 40vh;
 }
 
 .eventCard {
-  width: 280px;
-  height: 520px;
+  width: 100%;
+  height: 35vh;
   padding: 20px;
   background-color: #fff;
   border-radius: 8px;
@@ -158,7 +182,7 @@
 
 .event-card-header img {
   width: 100%;
-  height: 110px;
+  height: 8vh;
   object-fit: cover;
 }
 
@@ -208,13 +232,37 @@
 }
 
 .slick-list {
-  height: 550px;
+  height: 100%;
   padding-top: 20px !important;
 }
 
 .slick-slider.slick-initialized {
-  height: 550px;
+  height: 100%;
+  width: 100%;
 }
 .slick-slide > div {
   margin: 0 10px;
+}
+
+.slick-dots li button:before {
+  color: white !important;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  content: none !important;
+}
+
+.custom-prev-arrow,
+.custom-next-arrow {
+  z-index: 1000;
+  cursor: pointer;
+}
+
+.custom-prev-arrow {
+  left: -40px;
+}
+
+.custom-next-arrow {
+  right: -40px;
 }
