finished functionaliyt and view of edit events

--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -46,6 +46,9 @@
 
 .homePage-navigation a:hover {
   text-decoration: underline;
+  /* background-image: linear-gradient(to right, blue, red);
+  -webkit-background-clip: text;
+  color: transparent; */
 }
 
 .search-bar-container {
