--- a/frontend/src/styles/myEventsPage.css
+++ b/frontend/src/styles/myEventsPage.css
@@ -119,7 +119,7 @@
   align-items: center;
 }
 
-.btn-div{
+.btn-div {
   display: flex;
   flex-wrap: nowrap;
   width: 100%;
@@ -127,8 +127,8 @@
   justify-content: space-evenly;
 }
 .edit-event-btn,
-.save-event-btn, 
-.cancel-event-btn{
+.save-event-btn,
+.cancel-event-btn {
   padding: 10px;
   margin: 15px;
   width: 40%;
@@ -137,8 +137,22 @@
   cursor: pointer;
 }
 .edit-event-btn:hover,
-.save-event-btn:hover, 
-.cancel-event-btn:hover{
+.save-event-btn:hover,
+.cancel-event-btn:hover {
   background-color: #333;
   color: white;
+}
+input {
+  border: 0.5px solid lightgray;
+  padding: 5px;
+  border-radius: 4px;
+}
+
+textarea {
+  resize: none;
+  width: 100%;
+  height: 70px;
+  border: 0.5px solid lightgray;
+  padding: 5px;
+  border-radius: 4px;
 }
