now in my events card shows status of event and user can change it; changed frontend of myevents

--- a/frontend/src/styles/footer.css
+++ b/frontend/src/styles/footer.css
@@ -1,6 +1,6 @@
 .homePage-footer {
   background-color: rgb(15, 15, 15);
-  color: #333333;
+  color: rgb(234, 234, 234);
   display: flex;
   justify-content: center;
   align-items: center;
