--- a/frontend/src/styles/homePage.css
+++ b/frontend/src/styles/homePage.css
@@ -72,6 +72,7 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   padding: 1vh 0.2vw;
   background-color: rgba(255, 255, 255, 0.4);
+  flex-shrink: 0;
 }
 
 .selected {
@@ -265,4 +266,30 @@
 
 .custom-next-arrow {
   right: -40px;
+}
+
+@media (min-width: 770px) and (max-width: 1500px) {
+  .events-container {
+    height: auto;
+    width: 100%;
+  }
+  .upcomingEvents-container {
+    width: 100%;
+    height: auto;
+  }
+  .slick-list {
+    height: 100%;
+  }
+  .eventCard {
+    width: 100%;
+    padding: 10px;
+    height: 100%;
+    min-height: 370px;
+  }
+}
+
+@media (max-width: 950px) {
+  .homeUserCardProfile img {
+    display: none;
+  }
 }
