--- a/frontend/src/styles/homePage.css
+++ b/frontend/src/styles/homePage.css
@@ -63,7 +63,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 20vw;
+  width: 22%;
   height: 90%;
   border-radius: 3px;
   border: 1px groove;
@@ -227,7 +227,6 @@
 .eventCard:hover {
   transform: translateY(-2px);
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15), 0 4px 6px rgba(0, 0, 0, 0.1);
-  /* transition: all 0.5s ease-in-out; */
   transition: 0.7s;
   border: 1px solid black;
 }
