--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,5 +11,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: Arial, sans-serif;
+  font-family: "Inter";
+  font-style: normal;
+  letter-spacing: -0.04em;
 }
