--- a/frontend/src/styles/eventsPage.css
+++ b/frontend/src/styles/eventsPage.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jersey+15&display=swap");
 
 .eventsPage {
   margin: 0;
@@ -340,14 +341,6 @@ textarea::-webkit-scrollbar-thumb {
 
 .upcoming-text {
   text-transform: uppercase;
-  color: #0000;
-  font-family: sans-serif;
+  color: gray;
   font-size: 1.2em;
-  font-weight: bold;
-  background: repeating-conic-gradient(#000 0 0.00001%, #767676 0 0.0001%) 30%
-    10%/2500px 100px;
-  background-blend-mode: difference;
-  mix-blend-mode: lighten;
-  -webkit-background-clip: text;
-  background-clip: text;
 }
