--- a/frontend/src/styles/eventsPage.css
+++ b/frontend/src/styles/eventsPage.css
@@ -11,7 +11,7 @@
   gap: 2vh;
   align-items: center;
   width: 100%;
-  background-color: black;
+  background-color: rgb(30, 30, 30);
 }
 
 .addEventButton {
@@ -156,7 +156,7 @@ textarea::-webkit-scrollbar-thumb {
   height: 100%;
   border-radius: 6px;
   border: 1px solid rgba(33, 33, 33, 0.934);
-  background-color: rgba(16, 16, 16, 0.934);
+  background-color: rgb(68, 68, 68);
   transition: width 1s ease, height 1s ease;
 }
 
@@ -188,7 +188,7 @@ textarea::-webkit-scrollbar-thumb {
 .event-desc {
   display: flex;
   flex-direction: column;
-  gap:50px;
+  gap: 50px;
   width: 100%;
   margin-top: 2vh;
 }
@@ -232,7 +232,7 @@ textarea::-webkit-scrollbar-thumb {
   margin-bottom: 5px;
 }
 
-.delete-user-button{
+.delete-user-button {
   color: white;
   background-color: rgba(16, 16, 16, 0.934);
   border: 3px solid white;
@@ -304,7 +304,7 @@ textarea::-webkit-scrollbar-thumb {
   height: 100%;
   border-radius: 6px;
   border: 1px solid rgba(33, 33, 33, 0.934);
-  background-color: rgba(16, 16, 16, 0.934);
+  background-color: rgb(68, 68, 68);
 }
 
 .organiser img {
