--- a/frontend/src/styles/homePage.css
+++ b/frontend/src/styles/homePage.css
@@ -163,7 +163,7 @@
   border-top: 1px solid rgb(196, 196, 196);
 }
 
-.events-container {
+.home-events-container {
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -172,7 +172,7 @@
   gap: 0.5vh;
 }
 
-.events-container h3 {
+.home-events-container h3 {
   padding-left: 0.5vw;
   color: white;
 }
@@ -299,30 +299,4 @@
 
 .custom-next-arrow {
   right: -40px;
-}
-
-@media (min-width: 770px) and (max-width: 1600px) {
-  .events-container {
-    height: auto;
-    width: 100%;
-  }
-  .upcomingEvents-container {
-    width: 100%;
-    height: auto;
-  }
-  .slick-list {
-    height: 100%;
-  }
-  .eventCard {
-    width: 100%;
-    padding: 10px;
-    height: 100%;
-    min-height: 370px;
-  }
-}
-
-@media (max-width: 950px) {
-  .homeUserCardProfile img {
-    display: none;
-  }
 }
