--- a/frontend/src/styles/profilePage.css
+++ b/frontend/src/styles/profilePage.css
@@ -4,13 +4,26 @@
   box-sizing: border-box;
 }
 
+.profilePage {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  z-index: 1;
+  background-color: rgb(30, 30, 30);
+}
+
 .profile-page {
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: #0d1117f6;
   align-items: center;
 }
+
 .profile-page-container {
   display: flex;
   flex-direction: row;
@@ -70,18 +83,19 @@
   display: flex;
   width: 100%;
   flex-direction: column;
+  padding: 5vh 0;
   height: auto;
 }
-.profile-image {
-  display: flex;
-  width: auto;
-  height: 25%;
-  padding: 30px 50px;
-  margin-top: 2.5rem;
-  margin-left: 60px;
-}
-.profile-image img {
-  border-radius: 1000px;
+
+.profile-data img {
+  position: absolute;
+  top: -8%;
+  right: -2%;
+  border-radius: 100%;
+  width: 8vw;
+  height: auto;
+  border: 6px solid #282828;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .profile-data,
@@ -99,6 +113,9 @@
   padding: 30px;
 }
 
+.profile-data {
+  position: relative;
+}
 .information-container,
 .signin-info {
   display: flex;
