--- a/frontend/src/styles/myEventsPage.css
+++ b/frontend/src/styles/myEventsPage.css
@@ -3,6 +3,17 @@
   min-height: 100vh;
 }
 
+.created-events{
+  display: flex;
+  flex-direction: column;
+}
+.created-events h2{
+  color: white;
+  text-align: center;
+  font-size: 40px;
+  margin-top: 50px;
+}
+
 .events-list {
   display: flex;
   flex-direction: row;
@@ -159,6 +170,23 @@ textarea {
 }
 select {
   border-radius: 4px;
+}
+
+.confirmed-events{
+  display: flex;
+  flex-direction: column;
+}
+.confirmed-events h2{
+  color: white;
+  text-align: center;
+  font-size: 40px;
+  margin-top: 30px;
+}
+.confirmed-events-list{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 @media (max-width: 768px) {
